--- a/Nikhil_project.ipynb
+++ b/Nikhil_project.ipynb
@@ -22,7 +22,11 @@
         "\n",
         "Machine Learning (M606A Machine Learning (WS1224))\n",
         "\n",
-        "Github Link:\n",
+        "Github Link: https://github.com/nikhilsojitra/Machine-Learning/blob/main/Nikhil_project.ipynb\n",
+        "\n",
+        "Colab link: https://colab.research.google.com/drive/1HMXjqM7dq1GUlh_LZBs-h4PxjavlqZyo#scrollTo=O1m9e53_Vy_0\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "## **Project Overview**\n",
